--- a/src/sections/ExitFlight.module.css
+++ b/src/sections/ExitFlight.module.css
@@ -35,7 +35,10 @@
 
 .exitFill {
   position: absolute;
-  inset: -15%; /* Buffer to avoid edge clipping during scale/shift */
+  top: -10%;
+  left: -15%;
+  width: 130%;
+  height: 120%;
   background-image: url('/assets/images/backgrounds/cave-exit-landscape.webp');
   background-size: cover;
   background-position: center;
@@ -58,7 +61,10 @@
 
 .caveEdges {
   position: absolute;
-  inset: 0;
+  top: -10%;
+  left: 0;
+  width: 100%;
+  height: 120%;
   z-index: 2; /* On top of baseDark */
   background-image: url('/assets/images/backgrounds/cave-arch-mask.png');
   background-size: cover;
